src/objects/Apttus_Config2__ConstraintRuleAction__c.object
<CustomObject>
    <description>Captures information about rule actions. Rule actions are applied only when the rule conditions are satisfied.</description>
    <fields>
        <fullName>Apttus_Config2__ActionCriteria__c</fullName>
        <description>Represents the criteria to search for product or match a product depending on the type of the rule.</description>
        <label>Action Criteria</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionDisposition__c</fullName>
        <description>Whether the action can be ignored.</description>
        <label>Action Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionIntent__c</fullName>
        <description>Describes the intent of the action</description>
        <label>Action Intent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__ActionType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Include</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
                <value>
                    <fullName>Show Message</fullName>
                </value>
                <value>
                    <fullName>Check on Finalization</fullName>
                </value>
                <value>
                    <fullName>Disable Selection</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionType__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inclusion</fullName>
                    <default>true</default>
                    <label>Inclusion</label>
                </value>
                <value>
                    <fullName>Exclusion</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Recommendation</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoExclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Match only in asset, ignore cart.</description>
        <label>Ignore Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoInclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to automatically include the product matched by the include type rule action criteria.</description>
        <label>Auto Include (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConstraintRuleId__c</fullName>
        <description>References the master Constraint Rule record</description>
        <label>Constraint Rule</label>
        <referenceTo>Apttus_Config2__ConstraintRule__c</referenceTo>
        <relationshipLabel>Constraint Rule Actions</relationshipLabel>
        <relationshipName>ConstraintRuleActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EditCriteria__c</fullName>
        <description>Edit &quot;Action Criteria&quot; button</description>
        <formula>HYPERLINK(&quot;/apex/Apttus_Config2__ConstraintRuleActionCriteriaEdit?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_Config2__Button_EditCriteria&quot;, &quot;Edit Criteria&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeMatchRule__c</fullName>
        <description>Applicable only to include type rule action. For include min/max include min product should be specified.</description>
        <label>Min/Max Match Rule</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__ActionType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Include Any</fullName>
                </value>
                <value>
                    <fullName>Include All</fullName>
                </value>
                <value>
                    <fullName>Include Min/Max</fullName>
                </value>
                <value>
                    <fullName>Exclude All</fullName>
                </value>
                <value>
                    <fullName>Exclude After One</fullName>
                </value>
                <value>
                    <fullName>Exclude After Max</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeMaxProducts__c</fullName>
        <description>Maximum number of products that can be included. It is not applicable to include type rule action. Future recommend type rule action will require this field</description>
        <label>Max Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeMinProducts__c</fullName>
        <description>Minimum number of products that should be selected until the rule action message is displayed to select a product.</description>
        <label>Min Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to match the product in asset record</description>
        <label>Match In Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInCartOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to check for options in the whole cart</description>
        <label>Match In Cart Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to match the product in options</description>
        <label>Match In Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInPrimaryLines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to match the product among the products added as primary lines in the shopping cart.</description>
        <label>Match In Primary Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <description>Message entered in this field is displayed when the rule action requires user attention.</description>
        <inlineHelpText>Example: Please select one of the following product {0}.</inlineHelpText>
        <label>Message</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>Product category should be specified when product scope is set as Product Category</description>
        <label>Product Category (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>Product family should be specified when the product scope is set as Product Family.</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Group should be specified only when product scope is set as product group</description>
        <label>Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Constraint Rule Actions</relationshipLabel>
        <relationshipName>ConstraintRuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product should be specified when product scope is set as Product.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Constraint Rule Actions</relationshipLabel>
        <relationshipName>ConstraintRuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScope__c</fullName>
        <description>Represents how to match a product for the rule action.</description>
        <label>Product Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Product Group</fullName>
                </value>
                <value>
                    <fullName>Action Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RepeatInclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For every line item with triggering products there should be a line item with action product.</description>
        <inlineHelpText>Check this to repeat inclusion.</inlineHelpText>
        <label>Repeat Inclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Represents the sequence number of the rule.</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <description>LC-9112 : Used to perform data migration</description>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Key_Generator__c</fullName>
        <description>LC-9112 : Used for master data key generation</description>
        <displayFormat>CRA-{00000}</displayFormat>
        <label>Migration Key Generator</label>
        <type>AutoNumber</type>
    </fields>
    <label>Constraint Rule Action</label>
    <nameField>
        <label>Constraint Rule Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constraint Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>